made dark mode darker and fixed ugly highlight color

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -7,11 +7,11 @@
   --white: #efefef;
   --transwhite: rgba(239, 239, 239, 0.7);
   --moretranswhite: rgba(239, 239, 239, 0.1);
-  --black: #252525;
-  --transblack: rgba(37, 37, 37, 0.7);
-  --moretransblack: rgba(37, 37, 37, 0.1);
+  --black: #181818;
+  --transblack: rgba(24, 24, 24, 0.7);
+  --moretransblack: rgba(24, 24, 24, 0.1);
   --gray: #6b6b6b;
-  --highlight: #e5ffc3;
+  --highlight: rgba(16, 162, 245, 0.7);
   --red: #e4002b;
   --green: #24d05a;
   --pink: #eb4888;
@@ -65,7 +65,7 @@ body.dark-mode nav {
 
 @media (prefers-color-scheme: dark) {
   ::selection {
-    background-color: #0f0f0f;
+    background-color: var(--highlight);
     color: var(--white);
   }
   :root {
